
20110602T1030Z <gchicares@sbcglobal.net> [650]

  ihs_avmly.cpp
  premium_tax.cpp
  premium_tax.hpp
Improve certain member names.

20110608T1543Z <gchicares@sbcglobal.net> [650]

  account_value.hpp
  ihs_acctval.cpp
  ihs_avmly.cpp
  premium_tax.cpp
  premium_tax.hpp
Improve premium-tax encapsulation.

20110609T1206Z <gchicares@sbcglobal.net> [650]

  ihs_avmly.cpp
  premium_tax.cpp
  premium_tax.hpp
Rectify names.

20110611T1426Z <gchicares@sbcglobal.net> [650]

  ihs_avmly.cpp
  premium_tax.cpp
  premium_tax.hpp
Remove trivial accessors recently rendered needless.

20110612T1252Z <gchicares@sbcglobal.net> [649]

  ihs_avmly.cpp
Resolve a marked defect.

20110612T1313Z <gchicares@sbcglobal.net> [648]

  ihs_avmly.cpp
Resolve a marked defect. Extending TieredNetToGross() to keep track of
unused target premium would not make this code more maintainable.

20110613T1344Z <gchicares@sbcglobal.net> [648]

  dbdict.cpp
Improve documentation.

20110614T1214Z <gchicares@sbcglobal.net> [648]

  Makefile.am
  dbdict.cpp
  objects.make
  premium_tax.cpp
  premium_tax.hpp
Move premium-tax rates to a more appropriate place.

20110614T1652Z <gchicares@sbcglobal.net> [649]

  premium_tax.cpp
  premium_tax.hpp
Improve documentation.

20110616T1119Z <gchicares@sbcglobal.net> [649]

  install_wx.make
Use 2010-11-06 wx-2.9.2 snapshot. See:
  http://lists.nongnu.org/archive/html/lmi/2011-03/msg00008.html

20110621T2141Z <gchicares@sbcglobal.net> [649]

  install_libxml2_libxslt.make
Document a latent issue. See:
  http://lists.nongnu.org/archive/html/lmi/2011-06/msg00025.html

20110622T1736Z <gchicares@sbcglobal.net> [649]

  main_common.cpp
No longer follow documented advice that turned out to be wrong. See:
  http://lists.nongnu.org/archive/html/lmi/2011-06/msg00040.html

20110622T1910Z <gchicares@sbcglobal.net> [649]

  cpp_main.cpp
No longer follow documented advice that turned out to be wrong. See:
  http://lists.nongnu.org/archive/html/lmi/2011-06/msg00040.html
